kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allpad-api
  labels:
    app: allpad-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: allpad-api
  template:
    metadata:
      labels:
        app: allpad-api
    spec:
      containers:
        - name: allpad-api
          image: davidcamelo/allpad-api:main
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 64Mi
