kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: allpad-api
  labels:
    app: allpad-api
spec:
  selector:
    app: allpad-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
